fix(cards): Cards in a card-wrapper should be invisible

--- a/ui/components/cards/base/_index.scss
+++ b/ui/components/cards/base/_index.scss
@@ -159,7 +159,7 @@
 
   // Make cards inside cards or card wrappers invisible.
   .slds-card {
-    background: $cards-color-background;
+    background: $card-wrapper-color-background;
     border: none;
     border-radius: initial;
     box-shadow: none;
